# VoiceAssistant

./: README.md  VoiceAssistant.code-workspace
assistant/: .env.example  .gitignore  pyproject.toml
assistant/src/assistant/: __init__.py  __main__.py
assistant/src/assistant/tools/: calculator.py  time.py  weather.py
voiceModel/: README.md  pyproject.toml
voiceModel/src/voicemodel/: __init__.py  __main__.py
wakewordDetection/: .gitignore  README.md  pyproject.toml
wakewordDetection/src/wakeworddetection/: __init__.py  __main__.py  augment.py  convert_to_tflite.py  generate_noise.py  load_datasets.py  process.py  record.py  test.py  train.py
